--- a/src/mineswepper/gui/mineswepper.fxml
+++ b/src/mineswepper/gui/mineswepper.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
@@ -9,155 +10,52 @@
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mineswepper.gui.Controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mineswepper.gui.Controller">
    <top>
-      <MenuBar BorderPane.alignment="CENTER">
-        <menus>
-          <Menu mnemonicParsing="false" text="Game">
-            <items>
-              <MenuItem mnemonicParsing="false" onAction="#newGame" text="New" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <RadioMenuItem fx:id="easyDiff" mnemonicParsing="false" onAction="#setDifficulty" selected="true" text="Easy">
-                     <toggleGroup>
-                        <ToggleGroup fx:id="difficulty" />
-                     </toggleGroup></RadioMenuItem>
-                  <RadioMenuItem fx:id="intermediateDiff" mnemonicParsing="false" onAction="#setDifficulty" text="Intermediate" toggleGroup="$difficulty" />
-                  <RadioMenuItem fx:id="expertDiff" mnemonicParsing="false" onAction="#setDifficulty" text="Expert" toggleGroup="$difficulty" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" onAction="#exit" text="Exit" />
-            </items>
-          </Menu>
-          <Menu mnemonicParsing="false" text="Help">
-            <items>
-              <MenuItem mnemonicParsing="false" onAction="#howToPlay" text="How to Play" />
-                  <SeparatorMenuItem mnemonicParsing="false" />
-                  <MenuItem mnemonicParsing="false" onAction="#about" text="About Mineswepper" />
-            </items>
-          </Menu>
-        </menus>
-      </MenuBar>
+       <MenuBar BorderPane.alignment="CENTER">
+           <Menu mnemonicParsing="false" text="Game">
+               <MenuItem mnemonicParsing="false" onAction="#newGame" text="New" />
+               <SeparatorMenuItem mnemonicParsing="false" />
+               <RadioMenuItem fx:id="easyDiff" mnemonicParsing="false" onAction="#setDifficulty" selected="true" text="Easy" toggleGroup="$diffToggleGroup">
+                   <toggleGroup>
+                       <ToggleGroup fx:id="diffToggleGroup" />
+                   </toggleGroup>
+               </RadioMenuItem>
+               <RadioMenuItem fx:id="intermediateDiff" mnemonicParsing="false" onAction="#setDifficulty" text="Intermediate" toggleGroup="$diffToggleGroup" />
+               <RadioMenuItem fx:id="expertDiff" mnemonicParsing="false" onAction="#setDifficulty" text="Expert" toggleGroup="$diffToggleGroup" />
+               <SeparatorMenuItem mnemonicParsing="false" />
+               <MenuItem mnemonicParsing="false" onAction="#exit" text="Exit" />
+           </Menu>
+           <Menu mnemonicParsing="false" text="Help">
+               <MenuItem mnemonicParsing="false" onAction="#howToPlay" text="How to Play" />
+               <SeparatorMenuItem mnemonicParsing="false" />
+               <MenuItem mnemonicParsing="false" onAction="#about" text="About Mineswepper" />
+           </Menu>
+       </MenuBar>
    </top>
    <center>
-      <VBox BorderPane.alignment="CENTER">
-         <children>
-            <BorderPane prefHeight="30.0">
-               <center>
-                  <Button fx:id="face" mnemonicParsing="false" onAction="#newGame" text="UwU" BorderPane.alignment="CENTER" />
-               </center>
-               <left>
+       <VBox BorderPane.alignment="CENTER">
+           <BorderPane prefHeight="30.0">
+              <center>
+                  <Button fx:id="face" mnemonicParsing="false" onAction="#newGame" onMousePressed="#update" onMouseReleased="#update" text="UwU" BorderPane.alignment="CENTER" />
+              </center>
+              <left>
                   <HBox alignment="CENTER" minWidth="100.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <Label text="Mines Counter" />
-                     </children>
+                      <Label fx:id="mineCount" text="Mines Counter" />
                   </HBox>
-               </left>
-               <right>
+              </left>
+              <right>
                   <HBox alignment="CENTER" minWidth="100.0" BorderPane.alignment="CENTER">
-                     <children>
-                        <Label text="Timer" />
-                     </children>
+                      <Label fx:id="timer" text="Timer" />
                   </HBox>
-               </right>
-            </BorderPane>
-            <HBox alignment="CENTER">
-               <children>
-                  <GridPane alignment="CENTER" prefHeight="300.0" prefWidth="300.0">
-                    <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="1" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="2" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="3" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="4" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="5" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="6" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="7" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.rowIndex="1" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="1" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="1" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="1" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.rowIndex="2" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="2" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="2" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="7" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="7" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="7" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="7" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="7" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.rowIndex="7" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="6" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="6" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="6" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="6" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="6" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.rowIndex="6" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="5" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="5" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="5" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.rowIndex="5" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="4" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="4" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="4" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.rowIndex="4" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="7" GridPane.rowIndex="3" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="6" GridPane.rowIndex="3" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="5" GridPane.rowIndex="3" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="30.0" prefWidth="30.0" GridPane.rowIndex="3" />
-                     </children>
-                  </GridPane>
-               </children>
-            </HBox>
-         </children>
-      </VBox>
+              </right>
+           </BorderPane>
+           <HBox alignment="CENTER">
+               <Canvas fx:id="grid" height="300" onMousePressed="#gridPressed" onMouseReleased="#gridReleased" width="300" />
+           </HBox>
+       </VBox>
    </center>
 </BorderPane>
